# startup-os

./: .bazelrc  .gitignore  AUTHORS  BUILD  HEADER_JAVA  LICENSE  README.md  WORKSPACE  aaa  build.sh  check-formatting.sh  check_dependencies.sh  commands.txt  compile.sh  crystals_game.txt  dependencies.yaml  fix-formatting.sh  fix_formatting.sh  formatting.sh  index.html  package-lock.json  package.json  pre-commit.sh  reviewer-ci.sh  reviewer_config.prototxt  test.sh  test3.txt  whitelist.yaml
.circleci/: bazel.rc  config.yml  deleted_bazel_packages.txt  (+1 more)
examples/angular-bazel-comparison/angular-bazel-app/src/: BUILD.bazel  app.component.html  app.module.ts  index.html  main.ts  tsconfig.json
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-1/: BUILD.bazel  brick-1.component.html  brick-1.component.spec.ts  brick-1.component.ts  brick-1.module.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-10/: BUILD.bazel  brick-10.component.html  brick-10.component.spec.ts  brick-10.component.ts  brick-10.module.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-11/: brick-11.component.spec.ts  brick-11.component.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-12/: BUILD.bazel  brick-12.component.spec.ts  brick-12.component.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-13/: brick-13.component.html  brick-13.component.spec.ts  brick-13.component.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-14/: BUILD.bazel  brick-14.component.spec.ts  brick-14.component.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-15/: brick-15.component.spec.ts  brick-15.component.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-16/: BUILD.bazel  brick-16.component.spec.ts  brick-16.component.ts  brick-16.module.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-17/: brick-17.component.spec.ts  brick-17.component.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-18/: brick-18.component.spec.ts  brick-18.component.ts  brick-18.module.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-19/: brick-19.component.html  brick-19.component.spec.ts  brick-19.component.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-2/: BUILD.bazel  brick-2.component.html  brick-2.component.spec.ts  brick-2.component.ts  brick-2.module.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-20/: BUILD.bazel  brick-20.component.html  brick-20.component.spec.ts  brick-20.component.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-3/: BUILD.bazel  brick-3.component.html  brick-3.component.spec.ts  brick-3.component.ts  brick-3.module.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-4/: BUILD.bazel  brick-4.component.html  brick-4.component.spec.ts  brick-4.component.ts  brick-4.module.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-5/: BUILD.bazel  brick-5.component.html  brick-5.component.spec.ts  brick-5.component.ts  brick-5.module.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-6/: BUILD.bazel  brick-6.component.html  brick-6.component.spec.ts  brick-6.component.ts  brick-6.module.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-7/: BUILD.bazel  brick-7.component.html  brick-7.component.spec.ts  brick-7.component.ts  brick-7.module.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-8/: BUILD.bazel  brick-8.component.html  brick-8.component.spec.ts  brick-8.component.ts  brick-8.module.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-9/: BUILD.bazel  brick-9.component.html  brick-9.component.spec.ts  brick-9.component.ts  brick-9.module.ts
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-generator/: README.md  brick-generator.js
examples/angular-bazel-comparison/angular-bazel-app/src/bricks/brick-generator/creators/: create-build.js  create-component.js  create-html.js  create-module.js  create-test.js
examples/angular-bazel-comparison/angular-bazel-app/src/data-input/: BUILD.bazel  data-input.component.html  data-input.component.ts
examples/angular-bazel-comparison/angular-bazel-app/src/hello-world/: BUILD.bazel  hello-world.component.spec.ts  hello-world.component.ts
examples/angular-bazel-comparison/angular-bazel-app/src/list/: BUILD.bazel  list.component.html  list.component.ts  list.module.ts
examples/angular-bazel-comparison/angular-bazel-app/src/styles/: fonts.scss
examples/angular-bazel-comparison/webpack-app/src/bricks/brick-10/: BUILD.bazel  brick-10.component.html  brick-10.component.spec.ts  brick-10.component.ts  brick-10.module.ts
examples/angular-bazel-comparison/webpack-app/src/bricks/brick-11/: BUILD.bazel  brick-11.component.html  brick-11.component.spec.ts  brick-11.component.ts  brick-11.module.ts
examples/angular-bazel-comparison/webpack-app/src/bricks/brick-18/: BUILD.bazel  brick-18.component.html  brick-18.component.spec.ts  brick-18.component.ts
examples/angular-bazel-comparison/webpack-app/src/bricks/brick-2/: BUILD.bazel  brick-2.component.html  brick-2.component.spec.ts  brick-2.component.ts  brick-2.module.ts
examples/angular-bazel-comparison/webpack-app/src/bricks/brick-5/: BUILD.bazel  brick-5.component.html  brick-5.component.spec.ts  brick-5.component.ts  brick-5.module.ts
examples/angular-bazel-comparison/webpack-app/src/bricks/brick-7/: BUILD.bazel  brick-7.component.html  brick-7.component.spec.ts  brick-7.component.ts  brick-7.module.ts
examples/angular-bazel-comparison/webpack-app/src/bricks/brick-8/: BUILD.bazel  brick-8.component.html  brick-8.component.spec.ts  brick-8.component.ts  brick-8.module.ts
examples/angular-bazel-comparison/webpack-app/src/hello-world/: BUILD.bazel  hello-world.component.html  hello-world.component.spec.ts  hello-world.component.ts  hello-world.module.ts
(+1183 files in other folders)
