package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")

sass_binary(
    name = "data-input-styles",
    src = "data-input.component.scss",
)

ng_module(
    name = "data-input",
    srcs = [
        "data-input.component.ts",
        "data-input.module.ts",
    ],
    assets = [
        "data-input.component.html",
        ":data-input-styles",
    ],
    deps = [
        "//src/services",
        "@angular//packages/core",
        "@angular//packages/forms",
        "@rxjs",
    ],
)
