package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")

sass_binary(
  name = "hello-world-styles",
  src = "hello-world.component.scss",
)

ng_module(
  name = "hello-world",
  srcs = [
    "hello-world.component.ts",
    "hello-world.module.ts",
  ],
  assets = [
    ":hello-world.component.html",
    ":hello-world-styles",
  ],
  tsconfig = "//src:tsconfig.json",
  deps = [
    "//src/services",
    "@rxjs",
  ],
)

ts_library(
  name = "test_lib",
  testonly = 1,
  srcs = glob(["*.spec.ts"]),
  deps = [
    ":hello-world",
    "//src/services",
  ],
)

ts_web_test_suite(
  name = "test",
  bootstrap = ["//:node_modules/zone.js/dist/zone-testing-bundle.js"],
  browsers = [
    "@io_bazel_rules_webtesting//browsers:chromium-local",
  ],
  deps = [
    ":test_lib",
    "//:angular_bundles",
    "//:angular_test_bundles",
  ],
)
